--- a/bai5/style1.css
+++ b/bai5/style1.css
@@ -63,6 +63,8 @@ main{
 .tintuc-danhsach {
     display: flex;
     justify-content: space-between;
+    gap: 12px;
+    margin-top: 12px;
 }
 
 .Baiviet {
@@ -70,10 +72,50 @@ main{
     background-color: grey;
     width: 32%;
     margin: auto;
+    position: relative;
+    overflow: hidden;
 }
 
-img {
-    height: 200px;
-    display: flex;
-    margin: auto;
+.Baiviet img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    display: block;
+}
+.text{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    background-color: #2fa4e7;
+    padding: 4px 8px;
+    line-height: 1.7;
+    font-size: 14px;
+    background: rgba(14, 165, 233, 0.75);
+}
+.date{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 2px 4px;
+    background: rgba(14, 165, 233, 0.75);
+    text-align: end;
+    line-height: 10px;
+}
+.thongbao {
+    color: white;
+    background-color: blue;
+    text-decoration: none;
+    font-size: x-large;
+    font-weight: bold;
+    border-radius: 10px 10px 0px 0px;
+}
+.thongbao-anh img{
+    height: 250px;
+    width: 250px;
+}
+ul{
+    place-content: right;
 }
