--- a/bai5/style1.css
+++ b/bai5/style1.css
@@ -33,7 +33,7 @@ ul {
 
 .logo {
     height: 25px;
-    background-color:blue;
+    background-color:greenyellow;
 }
 
 main{
@@ -53,7 +53,7 @@ main{
 
 .tieude {
     color: white;
-    background-color: #2fa4e7;
+    background-color: gray;
     text-decoration: none;
     font-size: x-large;
     font-weight: bold;
